test/errors/equ2.rcasm
!let irqline0 = 13

    ldi m,xzyzy